# OpenGL-Engine

./: .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
examples/: imgui.ini  test.cc
examples/res/materials/: base_fragment.glsl  base_vertex.glsl  cubemap_fragment.glsl  ushader_untextured_fragment.glsl  ushader_untextured_vertex.glsl
lib/imguiText/: CMakeLists.txt  Makefile  TextEditor.h
lib/stbimage/: CMakeLists.txt  Makefile
src/: activeMaterial.cpp  activeMaterial.h  basics.h  camera.cpp  camera.h  core.h  debug.cpp  debug.h  directory.cpp  directory.h  engine.cpp  engine.h  engine_component.cpp  engine_component.h  framebuffer.cpp  framebuffer.h  glfw.h  gui.cpp  gui.h  gui_ext.h  id.h  light.cpp  light.h  load_shader.cpp  load_shader.h  macros.h  main.cpp  material.cpp  material.h  material_instance.cpp  material_instance.h  mesh.cpp  mesh.h  mesh_buffer.cpp  mesh_buffer.h  mesh_builder.cpp  mesh_builder.h  mesh_native.h  mesh_region.h  model.cpp  (+32 more)
src/ext/: globalWorldMaterial.h  sky.cpp  sky.h
src/ext/camera/: camera.cpp  camera.h  dummyCamera.cpp  dummyCamera.h  flyCamera.cpp  flyCamera.h
src/ext/light/: pointLight.cpp  pointLight.h  shadowMapWorldMaterial.h
src/gui/: fonts.cpp  fonts.h  gui.cpp  gui.h  gui_ext.cpp  gui_ext.h  unit.h
src/io/: io.cpp  io.h  resource.cpp  resource.h  textureResource.h
src/mesh/: multiResPlane.cpp  multiResPlane.h  primitiveMesh.cpp  primitiveMesh.h  sphereMesh.cpp  sphereMesh.h  voxelMesh.h
src/render/: renderContext.h
src/scene/: node.cpp  node.h
src/structures/: access.h  pack.h  storage.h
(+14 files in other folders)
