project(Engine)
file(GLOB_RECURSE SRC src/*.cpp src/*.h)
include_directories(src)
include_directories(lib)
add_library(engine ${SRC})
add_subdirectory(lib/imgui)
add_subdirectory(lib/imguiText)
add_subdirectory(lib/stbimage)
target_link_libraries(engine imgui imguiText stbimage)

set(CMAKE_CXX_FLAGS_DEBUG "-g -DNDEBUG")
